fix: Ensure prompts-only checkbox is checked by default - Update index.html to set the prompts-only generation checkbox as checked on page load - Add newline at the end of the file for proper formatting

--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,7 @@
                         type="checkbox"
                         id="promptsOnly"
                         class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
+                        checked
                     >
                     <span class="text-sm text-gray-700">Generate prompts only (no video creation)</span>
                 </label>
@@ -225,4 +226,4 @@
 
     <script src="/static/app.js"></script>
 </body>
-</html> 
+</html>
